# cc2emulator

./: LICENSE.md  README.md  meson.build
data/: app.config
include/Compucolor/: CompucolorEmulatorProcessor.h  EmulatorBackgroundTask.h  ICompucolorEmulator.h
include/Compucolor/Common/: Color.h  ICpu.h  IDisplay.h  IEmulatable.h  IInputDevice.h  IOutputDevice.h  IPlugin.h  IPluginManager.h  IResetable.h  ISystem.h  PluginLoader.h  PluginManager.h
include/Compucolor/Configuration/: IConfiguration.h
include/Compucolor/Crt/: ICrtEmulator.h
include/Compucolor/Floppy/: IFloppyEmulator.h
include/Compucolor/Intel8080/: IIntel8080Bus.h  IIntel8080Emulator.h
include/Compucolor/Keyboard/: CompucolorIIKey.h  IKeyboardEmulator.h
include/Compucolor/Logger/: ConsoleLoggerProvider.h  ILogger.h  ILoggerProvider.h  LogLevel.h
include/Compucolor/Memory/: IMemory.h
include/Compucolor/Scheduler/: IScheduler.h
include/Compucolor/Smc5027/: ISmc5027Emulator.h
include/Compucolor/Tms5501/: ITms5501Emulator.h
src/Compucolor.App/: ConsoleLoggerProvider.cpp  ConsoleLoggerProvider.h  Emulator.cpp  Emulator.h  get_emulator.cpp  get_emulator.h
src/Compucolor.App.Impl.Gtk/: GObjectDeleter.h  GWidgetDeleter.h  GtkDisplay.cpp  GtkDisplay.h  GtkKeyboard.cpp  GtkKeyboard.h  GtkLoggerProvider.cpp  GtkLoggerProvider.h  main.cpp
src/Compucolor.App.Impl.Sfml/: Display.cpp  Display.h  Emulator.cpp  Emulator.h  ErrorHandler.cpp  ErrorHandler.h  KeyboardTranslator.cpp  KeyboardTranslator.h  LoggerProvider.cpp  LoggerProvider.h  Program.cpp  Program.h  main.cpp
src/Compucolor.Compucolor/: ICompucolorEmulator.h
src/Compucolor.Compucolor.Impl/: CompucolorEmulator.cpp  CompucolorEmulator.h  CompucolorIntel8080Bus.cpp  CompucolorIntel8080Bus.h  Roms.cpp  Roms.h
src/Compucolor.Configuration/: IConfiguration.h
src/Compucolor.Configuration.Impl/: Configuration.cpp  Configuration.h
src/Compucolor.Core/: BaseEmulator.cpp  ByteArrayMemory.cpp  ByteArrayMemory.h  Color.h  ICpu.h  IDisplay.h  IEmulatable.h  IInputDevice.h  IKeyboard.h  IMemory.h  IOutputDevice.h  IResetable.h  ISystem.h  Uuid.cpp  Uuid.h
src/Compucolor.Crt/: ICrtEmulator.h
src/Compucolor.Crt.Impl/: CrtEmulator.cpp  CrtEmulator.h  FontRom.cpp  FontRom.h
src/Compucolor.Floppy/: IFloppyEmulator.h
src/Compucolor.Floppy.Impl/: FloppyEmulator.cpp  FloppyEmulator.h
src/Compucolor.Impl.App.Sfml/: Display.cpp  Display.h  KeyboardTranslator.cpp  KeyboardTranslator.h  Program.cpp  Program.h  get_emulator.cpp  get_emulator.h  main.cpp
src/Compucolor.Impl.Compucolor/: CompucolorEmulator.cpp  CompucolorEmulator.h  CompucolorIntel8080Bus.cpp  CompucolorIntel8080Bus.h  Roms.cpp  Roms.h
src/Compucolor.Impl.Configuration/: Configuration.cpp  Configuration.h
src/Compucolor.Impl.Crt/: CrtEmulator.cpp  CrtEmulator.h  FontRom.cpp  FontRom.h
src/Compucolor.Impl.Floppy/: FloppyEmulator.cpp  FloppyEmulator.h
src/Compucolor.Impl.Intel8080/: Intel8080.cpp  Intel8080.h  Intel8080Emulator.cpp  Intel8080Emulator.h  Intel8080EmulatorContext.cpp  Intel8080EmulatorContext.h  PluginFactory.cpp
src/Compucolor.Impl.Keyboard/: KeyboardEmulator.cpp  KeyboardEmulator.h
src/Compucolor.Impl.Logger/: Logger.cpp  Logger.h
src/Compucolor.Impl.Memory/: PluginFactory.cpp  VectorMemory.cpp  VectorMemory.h
src/Compucolor.Impl.Scheduler/: Scheduler.cpp  Scheduler.h
src/Compucolor.Impl.Smc5027/: Smc5027Emulator.cpp  Smc5027Emulator.h
src/Compucolor.Impl.Tms5501/: Tms5501Emulator.cpp  Tms5501Emulator.h  Tms5501EmulatorContext.cpp  Tms5501EmulatorContext.h
src/Compucolor.Intel8080/: IIntel8080Bus.h  IIntel8080Emulator.h
src/Compucolor.Intel8080.Impl/: Intel8080.cpp  Intel8080.h  Intel8080Emulator.cpp  Intel8080Emulator.h  Intel8080EmulatorContext.cpp  Intel8080EmulatorContext.h
src/Compucolor.Keyboard/: IKeyboardEmulator.h
src/Compucolor.Keyboard.Impl/: KeyboardEmulator.cpp  KeyboardEmulator.h
src/Compucolor.Logger/: ILogger.h  ILoggerProvider.h  LogLevel.h
src/Compucolor.Logger.Impl/: Logger.cpp  Logger.h
src/Compucolor.Memory/: IMemory.h
src/Compucolor.Memory.Impl/: VectorMemory.cpp  VectorMemory.h
src/Compucolor.Scheduler.Impl/: Scheduler.cpp  Scheduler.h
src/Compucolor.Smc5027/: ISmc5027Emulator.h
src/Compucolor.Smc5027.Impl/: Smc5027Emulator.cpp  Smc5027Emulator.h
src/Compucolor.Tms5501/: ITms5501Emulator.h
src/Compucolor.Tms5501.Impl/: Tms5501Emulator.cpp  Tms5501Emulator.h  Tms5501EmulatorContext.cpp  Tms5501EmulatorContext.h
test/Compucolor.Impl.Tests.Crt/: CrtEmulatorTests.cpp
test/Compucolor.Impl.Tests.Memory/: VectorMemoryTests.cpp
test/Compucolor.Impl.Tests.Smc5027/: Smc5027EmulatorTests.cpp  main.cpp
test/Compucolor.Tests.Core/: MockMemory.h  MockSmc5027Emulator.h  NoopLogger.h
test/Compucolor.Tests.Crt.Impl/: CrtEmulatorTests.cpp
test/Compucolor.Tests.Memory.Impl/: VectoryMemoryTests.cpp
test/Compucolor.Tests.Smc5027.Impl/: Smc5027EmulatorTests.cpp
